<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alma</string>
    <string name="apikey">AIzaSyByx8frF-GxPzwKFk4tEhK6LRXhI3fdR58</string>
    <string name="insert_url">http://192.168.1.11/asnaflocator/insert_report.php</string>
    <string name="read_url">http://192.168.1.11/asnaflocator/read_report.php</string>
    <string name="update_url">http://192.168.1.11/asnaflocator/update_report.php</string>
    <string name="web_root">http://192.168.1.11/asnaflocator/</string>
    <string name="mapdata">mapdata</string>
    <string name="device_position">3.065570,101.455997</string>
    <string name="default_position">3.2301164536717533,101.47247616201639</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Signin">Sign In</string>
    <string name="Login">Login</string>
    <string name="logout">Logout</string>
    <string name="main_menu">Main Menu</string>
    <string name="exit">Exit without logout</string>
    <string name="map_search">Find</string>
    <string name="map_search_hint">Search Location</string>
    <string name="new_report">New Report</string>
    <string name="report_map">Report Map</string>
    <string name="lzs_offices">LZS Offices</string>
    <string name="report_asnaf">Report Asnaf</string>
    <string name="close_popup">Close</string>
    <string name="preview">Preview</string>
    <string name="title">Title</string>
    <string name="report_description">Description</string>
    <string name="reporter">Reporter</string>
    <string name="view_detail">View Detail</string>
    <string name="long_click_instruct">Please point to the location on the map and hold for 2 seconds to grab the coordinate</string>
    <string name="view_detail_instruct">Please point to the marker to view its detail</string>
    <string name="contact_info">Contact Information</string>
    <string name="view_map">Map</string>
    <string name="hq">Headquarters</string>
    <string name="hq_title">Lembaga Zakat Selangor Headquarters</string>
    <string name="hq_address">Bangunan Zakat Selangor\n3-01-1, Precint ALAMi\nPusat Perniagaan Worldwide 2\nPersiaran Akuatik, Section 13\n40100 Shah Alam\nSelangor Darul Ehsan</string>
    <string name="hq_contacts">Toll Free Line : 1800-88-5353\nTelephone: 03-55227700    Fax: 03-55227722\nEmail: callcenter@e-zakat.com.my</string>
    <string name="district1">Gombak</string>
    <string name="district2">Hulu Langat</string>
    <string name="district3">Hulu Selangor</string>
    <string name="district4">Klang</string>
    <string name="district5">Kuala Langat</string>
    <string name="district6">Kuala Selangor</string>
    <string name="district7">Petaling</string>
    <string name="district8">Sabak Bernam</string>
    <string name="district9">Sepang</string>
    <string name="hq_position">3.073733545054648,101.54309470206499</string>
    <string name="branch1_position">3.2567385864544276,101.65677845478058</string>
    <string name="branch2_position">3.2107195584622836,101.56024508178234</string>
    <string name="branch3_position">3.1720013257541457,101.75106883049011</string>
    <string name="branch4_position">3.21171041752258,101.74940887838602</string>
    <string name="branch5_position">3.14764439265551,101.76345057785511</string>
    <string name="branch6_position">2.963976873518393,101.75488024950027</string>
    <string name="branch7_position">3.0787065603303634,101.75022259354591</string>
    <string name="branch8_position">2.992203484255799,101.79042924195528</string>
    <string name="branch9_position">3.5642423378698913,101.6605382412672</string>
    <string name="branch10_position">3.111938185714065,101.4376537129283</string>
    <string name="branch11_position">3.047889161558807,101.44618313759565</string>
    <string name="branch12_position">2.8123845173669273,101.50164753198624</string>
    <string name="branch13_position">3.3306429222515006,101.25464256852865</string>
    <string name="branch14_position">3.418716160285888,101.18623316287994</string>
    <string name="branch15_position">3.0806878588606565,101.51866748929024</string>
    <string name="branch16_position">3.1384539027174827,101.6203936189413</string>
    <string name="branch17_position">3.0698780528725877,101.5173290669918</string>
    <string name="branch18_position">3.078970376569072,101.52033548802137</string>
    <string name="branch19_position">3.1112184047654843,101.63382779806852</string>
    <string name="branch20_position">3.025136791658361,101.61685612052679</string>
    <string name="branch21_position">3.0791889958138414,101.58092189580202</string>
    <string name="branch22_position">3.6740869284091526,100.98534408956766</string>
    <string name="branch23_position">2.815670949538576,101.73294983804226</string>
    <string name="branch1_title">Bandar Baru Selayang</string>
    <string name="branch1_address">No. 17 Jalan 2/16 Dataran Templer\nBandar Baru Selayang\n68100 Batu Caves\nSelangor Darul Ehsan</string>
    <string name="branch1_contacts">Telephone: 03-61370215    Fax: 03-61374763</string>
    <string name="branch2_title">Sungai Buloh</string>
    <string name="branch2_address">No. 8 (G &amp; LG)\nJalan BRP 1/2\nBukit Rahman Putra\n47000 Sungai Buloh\nSelangor Darul Ehsan</string>
    <string name="branch2_contacts">Telephone: 03-61567422    Fax: 03-61411306</string>
    <string name="branch3_title">Taman Keramat</string>
    <string name="branch3_address">Pejabat Agama Islam Gombak Timur\nJalan AU 2A/17, Taman Keramat\n54200 Kuala Lumpur</string>
    <string name="branch3_contacts">Telephone: 03-42528363    Fax: 03-42528661</string>
    <string name="branch4_title">Taman Melawati</string>
    <string name="branch4_address">No. 340 Lorong Serawak (Blok B)\nMelawati Urban 1\nPusat Bandar Melawati\n53100 Kuala Lumpur</string>
    <string name="branch4_contacts">Telephone: 03-41474825    Fax: 03-41474823</string>
    <string name="branch5_title">Bandar Baru Ampang</string>
    <string name="branch5_address">No. 1A Jalan Wawasan Ampang 4/6\nBandar Baru Ampang\n68000 Ampang\nSelangor Darul Ehsan</string>
    <string name="branch5_contacts">Telephone: 03-42701705    Fax: 03-42701645</string>
    <string name="branch6_title">Bandar Baru Bangi</string>
    <string name="branch6_address">No. 163 Jalan 8/1\nSeksyen 8\n43650 Bandar Baru Bangi\nSelangor Darul Ehsan</string>
    <string name="branch6_contacts">Telephone: 03-89254933    Fax: 03-89255433</string>
    <string name="branch7_title">Cheras</string>
    <string name="branch7_address">F4, Tingkat 1\nWisma Dato\' Lope\nCheras Batu 7, Jalan Cheras\n43200 Cheras\nSelangor Darul Ehsan</string>
    <string name="branch7_contacts">Telephone: 03-90763975    Fax: 03-90763954</string>
    <string name="branch8_title">Kajang</string>
    <string name="branch8_address">No. 13 Jalan Raja Haroun\n43000 Kajang\nSelangor Darul Ehsan</string>
    <string name="branch8_contacts">Telephone: 03-87364187    Fax: 03-87362763</string>
    <string name="branch9_title">Kuala Kubu Bharu</string>
    <string name="branch9_address">Tingkat Bawah Bangunan Hj. Khalid\nLot 16, Seksyen 7, Jalan Mat Kilau\n44000 Kuala Kubu Bharu\nSelangor Darul Ehsan</string>
    <string name="branch9_contacts">Telephone: 03-60645104    Fax: 03-60645343</string>
    <string name="branch10_title">Klang Sentral</string>
    <string name="branch10_address">No. 31-G, Jalan KS9/KU5\n41050 Klang\nSelangor Darul Ehsan</string>
    <string name="branch10_contacts">Telephone: 03-33416939    Fax: 03-33416899</string>
    <string name="branch11_title">Klang Utara</string>
    <string name="branch11_address">Masjid Bandar Diraja\n41050 Klang\nSelangor Darul Ehsan</string>
    <string name="branch11_contacts">Telephone: 03-33445703    Fax: 03-33445706</string>
    <string name="branch12_title">Banting</string>
    <string name="branch12_address">No. 142 A, Tingkat 1 &amp; 2\nJalan Bunga Pekan\n42700 Banting\nSelangor Darul Ehsan</string>
    <string name="branch12_contacts">Telephone: 03-31804350   Fax: 03-31877130</string>
    <string name="branch13_title">Kuala Selangor</string>
    <string name="branch13_address">No. 4 Jalan Melati 3/19\nBandar Melawati\n45000 Kuala Selangor\nSelangor Darul Ehsan</string>
    <string name="branch13_contacts">Telephone: 03-32897202    Fax: 03-32813870</string>
    <string name="branch14_title">Tanjung Karang</string>
    <string name="branch14_address">No. 5 Tingkat Bawah dan Tingkat Mezzanin\nJalan Makmor 1, Taman Makmor\n45500 Tanjung Karang\nSelangor Darul Ehsan</string>
    <string name="branch14_contacts">Telephone: 03-32693728    Fax: 03-32692980</string>
    <string name="branch15_title">Bangunan Sultan Idris Shah</string>
    <string name="branch15_address">Aras Bawah Menara Selatan\nPersiaran Masjid\n40100 Shah Alam\nSelangor Darul Ehsan</string>
    <string name="branch15_contacts">Telephone: 03-55106307    Fax: 03-55106761</string>
    <string name="branch16_title">Damansara</string>
    <string name="branch16_address">Masjid Mujahideen\nSS 21/23 Damansara Utama\n46300 Petaling Jaya\nSelangor Darul Ehsan</string>
    <string name="branch16_contacts">Telephone: 03-77270853    Fax: 03-77241758</string>
    <string name="branch17_title">Kompleks PKNS Shah Alam</string>
    <string name="branch17_address">Lot 01-169B, Tingkat 1\nKompleks PKNS\n40000 Shah Alam\nSelangor Darul Ehsan</string>
    <string name="branch17_contacts">Telephone: 03-55103137    Fax: 03-55140043</string>
    <string name="branch18_title">Masjid Negeri Shah Alam</string>
    <string name="branch18_address">Masjid Sultan Salahuddin Abdul Aziz Shah\nTingkat Bawah Persiaran Masjid\n40000 Shah Alam\nSelangor Darul Ehsan</string>
    <string name="branch18_contacts">Telephone: 03-55112752    Fax: 03-55125004</string>
    <string name="branch19_title">Petaling Jaya</string>
    <string name="branch19_address">No. 12 The Right Angle\nJalan 14/22\n46100 Petaling Jaya\nSelangor Darul Ehsan</string>
    <string name="branch19_contacts">Telephone: 03-79583681    Fax: 03-79550862</string>
    <string name="branch20_title">Puchong</string>
    <string name="branch20_address">No. 18/1 Jalan Puteri 1/1\nBandar Puteri\n47100 Puchong\nSelangor Darul Ehsan</string>
    <string name="branch20_contacts">Telephone: 03-80616409    Fax: 03-80616097</string>
    <string name="branch21_title">Subang Jaya</string>
    <string name="branch21_address">No. 11 Wisma Dicor\nJalan SS17/1A\n47500 Subang Jaya\nSelangor Darul Ehsan</string>
    <string name="branch21_contacts">Telephone: 03-56376695    Fax: 03-56382694</string>
    <string name="branch22_title">Sungai Besar</string>
    <string name="branch22_address">No. 3B, Lot PT.6167\nJalan Mahsuri\n45300 Sungai Besar\nSelangor Darul Ehsan</string>
    <string name="branch22_contacts">Telephone: 03-32245166/03-32247977\nFax: 03-32251131</string>
    <string name="branch23_title">Bandar Baru Salak Tinggi</string>
    <string name="branch23_address">Lot C40-1, Jalan 6\nKosmopleks Salak Tinggi\nBandar Baru Salak Tinggi\n43900 Sepang\nSelangor Darul Ehsan</string>
    <string name="branch23_contacts">Telephone: 03-87064806    Fax: 03-87064821</string>
</resources>
