<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".SecondActivity" >
      
   <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:text="@string/main_menu"
      android:textAppearance="?android:attr/textAppearanceLarge" />
   
   <Button
      android:id="@+id/button1"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView1"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:onClick="newreport"
      android:text="@string/new_report"/>


   <Button
      android:id="@+id/button2"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button1"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:onClick="reportmap"
      android:text="@string/report_map" />
   
   <Button
      android:id="@+id/button3"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button2"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:onClick="officemap"
      android:text="@string/lzs_offices" />
   
   <Button
      android:id="@+id/button4"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_below="@+id/button3"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:onClick="logout"
      android:text="@string/logout" />

</RelativeLayout>