<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/mylinearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/title"
            android:textSize="12sp"
            android:textStyle="bold" />
    
    <RelativeLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content">
    <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/title"
            android:textSize="12sp"
            android:textStyle="bold" />
      
    <TextView
            android:id="@+id/reporter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/title2"
            android:contentDescription="@string/reporter"
            android:textSize="12sp" />
    </RelativeLayout>
    
    <TextView
            android:id="@+id/snippet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/report_description"
            android:textSize="12sp" 
            android:textStyle="italic"/>
    
    <Button
            android:id="@+id/view_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/view_detail" />

</LinearLayout>
